# Networks-Analysis

./: LICENSE  README.md  article_scientifique.md  dataset_scrutins.csv  legislative_graph.html  pyproject.toml
Output/2012-2017/: dataset_scrutins_14.csv
scr/: analyzer.py  config.py  distribution.py  fetcher.py  graph.py  graph_colors.py  main.py  properties.py  similarity.py
src/: classification.py  config.py  convert.py  distribution.py  fetcher.py  graph.py  main.py  similarity.py  stats.py
