[tool.poetry]
name = "politics-graphs"
version = "0.1.0"
description = ""
authors = ["Inès"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.14,<3.14.1 || >3.14.1,<4.0"
numpy = "^2.4.1"
scikit-learn = "^1.8.0"
pandas = "^2.3.3"
matplotlib = "^3.10.8"
networkx = "^3.6.1"
community = "^1.0.0b1"
python-louvain = "^0.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
