[tool.poetry]
name = "politics-graphs"
version = "0.1.0"
description = "Graph analysis of voting patterns in the French National Assembly"
authors = ["Inès <inesderosnay@example.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = "^2.4.1"
scikit-learn = "^1.8.0"
pandas = "^2.3.3"
matplotlib = "^3.10.8"
networkx = "^3.6.1"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.5.0"
ipykernel = ">=7.1.0,<8.0.0"

[tool.poetry.scripts]
politics-graphs = "src.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
